
WIP      [CORE] Automatic generation of 3D Boxes using BoxFront and BoxSpine.
         Copy this feature from AML.

WIP      [CORE] Automatic generation of BoxTextures from BoxBack, BoxSpine and BoxFront.
         Copy this feature from AML.

WIP      [MANUALS] Port the PDF manual reader from AML into AEL.


[B]Advanced Emulator Launcher | version 0.9.10 | xx July 2020[/B]

WIP      [CORE] Unified ROM artwork directory. This will require heavy changes in categories.xml.
         I still have to think how to properly implement this. This is related to the
         desing of a prototype Kodi games database.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2865413#pid2865413
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2867785#pid2867785

WIP      [CORE] New fields in database to be prepared for the future. See NOTES.md

WIP      [CORE] Support for BoxSpine artwork. Support for BoxTextures artwork.
         Have a look at LaunchBox for other types of artwork that may be interesting.

WIP      [CORE] New Utility "Delete ROMs redundant artwork"
         Redundant artwork is orphaned artwork. This is not easy to code specially
         for launcher with recursive scan where ROMs can be in different
         directories.

WIP      [FAVOURITES] Change the way artwork is stored in Favourites, Launchers and
         Categories directories. Avoid using IDs in the artwork name unless absolutely
         necessary. Use same scheme as ROM collections.

WIP      [ROM AUDIT] Separate the ROM Audit code from the Parent/Clone code.

WIP      [ROM AUDIT] Add an option to create a default Parent ROM for Redump DATs or NoIntro DATs
         with no PClone information. See NOTES.md for implementation ideas.

WIP      [ROM AUDIT] Options to generate the 1G1R parent list, like prefer ROMs from Europe,
         Japan or USA. This resembles what NARS No-Intro filtering does.
